# jmap-server-cli

./: .gitignore  CNAME  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml  rust.yml  test.yml
resources/ci/: cargo.sh  install-build-tools.sh
src/: main.rs
src/modules/: account.rs  cli.rs  common.rs  domain.rs  group.rs  import.rs  ingest.rs  list.rs  mod.rs
