[package]
name = "stalwart-cli"
description = "Stalwart JMAP Server CLI"
authors = ["Stalwart Labs <hello@stalw.art>"]
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
jmap-client = { path = "/home/vagrant/code/jmap-client", default-features = false, features = ["blocking"] } 
reqwest = { git = "https://github.com/stalwartlabs/reqwest.git", default-features = false, features = ["blocking", "rustls-tls"]}
clap = { version = "3.2.16", features = ["derive"] }
prettytable-rs = "0.8"
rpassword = "7.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
