[package]
name = "stalwart-cli"
description = "Stalwart JMAP Server CLI"
authors = ["Stalwart Labs Ltd. <hello@stalw.art>"]
license = "AGPL-3.0-only"
repository = "https://github.com/stalwartlabs/jmap-server-cli"
homepage = "https://github.com/stalwartlabs/jmap-server-cli"
version = "0.1.0"
edition = "2021"
readme = "README.md"
resolver = "2"

[dependencies]
jmap-client = { git = "https://github.com/stalwartlabs/jmap-client", default-features = false, features = ["blocking", "follow-trusted"] } 
mail-parser = { git = "https://github.com/stalwartlabs/mail-parser" } 
reqwest = { git = "https://github.com/stalwartlabs/reqwest.git", default-features = false, features = ["blocking", "rustls-tls"]}
rayon = "1.5.1"
num_cpus = "1.13.1"
clap = { version = "3.2.16", features = ["derive"] }
prettytable-rs = "0.9.0"
rpassword = "7.0"
indicatif = "0.17.0"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
csv = "1.1"

[profile.dev]
opt-level = 0
debug = 1
codegen-units = 4
lto = false
incremental = true
panic = 'unwind'
debug-assertions = true
overflow-checks = false
rpath = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = true
incremental = false
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false
#strip = true
